<resources>
    <string name="appName">TrackNJeep</string>
    <string name="btnTxtLoginUser">Sign Up</string>
    <string name="btnTxtLoginGuest">Continue as Guest</string>
    <string name="txtLogInWith">Log in with </string>
    <string name="loginText">LOGIN</string>
    <string name="loginTextSmall">Login</string>
    <string name="registerTextSmall">Register</string>
    <string name="emailDefault">Email</string>
    <string name="passwordDefault">Password</string>
    <string name="registerText">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtforSlogan">"One Jeep, One Click"</string>

    <!-- Setting Screen -->
    <string name="txtSettings">Settings</string>
    <string name="btnBack">Back Button</string>
    <string name="txtDarkMode">Dark Mode</string>
    <string name="txtAbout">About</string>
    <string name="txtPrivacyPolicy">Privacy Policy</string>
    <string name="txtLogOut">Log Out</string>


    <string name="title_activity_maps">MapsActivity</string>
    <string name="go">Go</string>
    <string name="enter_destination">Enter destination</string>
    <string name="destination">To:      </string>
    <string name="enter_from_location">Enter from location</string>
    <string name="from">From:</string>
    <string name="transit_details_will_be_shown_here">Transit Details will be shown here</string>
    <string name="available_jeepneys">Available Jeepneys:</string>
    <string name="estimated_time_of_arrival">Estimated Time of Arrival:</string>
    <string name="estimated_code">Estimated Code:</string>
    <string name="fare_cost_discounted">Fare Cost (Discounted):</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--Profile PArttuee -->
    <string name="txtProfile">Profile</string>
    <string name="explore_places_here">Explore places here...</string>
    <string name="click_here_to_find_your_jeep">Click here to find your jeep!</string>
    <string name="ready_to_travel">Ready to Travel?</string>
    <string name="enter_a_place_and_make_it_2">Enter a place and make it 2!</string>
    <string name="track_your_jeep">Track Your Jeep!</string>
    <string name="find_your_jeep">Find Your Jeep!</string>
    <string name="enter_jeepney_code">Enter Jeepney Code....</string>
    <string name="think_a_jeep">Think A Jeep.</string>
    <string name="routes">Routes: </string>
    <string name="destination2">Routes: </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hashedPass">******</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_1234567890">1234567890</string>
    <string name="male">Male</string>
    <string name="gender">Gender:</string>
    <string name="kumar">Kumar</string>
    <string name="bolante">Bolante</string>
    <string name="val">Val</string>
    <string name="first_name">First Name:</string>
    <string name="example_email_com">example@email.com</string>
    <string name="email">Email:</string>
    <string name="val_bolante">Val Bolante</string>
    <string name="profile">Profile</string>
    <string name="lastname">Lastname:</string>
    <string name="social_media">Social Media</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="favorites">Favorites:</string>
    <string name="no_favorites_yet">No favorites yet</string>
</resources>