<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Top Frame Layout with form elements -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/background_gradient"
            android:id="@+id/frame_layout_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:text="@string/track_your_jeep">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/backgroundz"
                    android:padding="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/fromTxtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/from"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/fromTxtEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/enter_from_location"
                        android:inputType="text" />
                </LinearLayout>

                <!-- To Location -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/backgroundz"
                    android:padding="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/toTxtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/destination"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/toTextEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/enter_destination"
                        android:inputType="text" />
                </LinearLayout>

                <!-- Go Button -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/goBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/go" />
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</ScrollView>
