<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    tools:context=".auth.Login">

    <TextView
        android:text="@string/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:fontFamily="@font/roboto_slab_bold"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:fontFamily="@font/roboto_slab_bold"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:hint="@string/emailDefault"
            android:fontFamily="@font/roboto_slab_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:fontFamily="@font/roboto_slab_bold"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:fontFamily="@font/roboto_slab_bold"
            android:hint="@string/passwordDefault"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginProgBar"
        android:visibility="gone" />

    <Button
        android:id="@+id/logInBtn"
        android:text="@string/loginText"
        android:fontFamily="@font/roboto_slab_bold"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnOrange"/>
</LinearLayout>
