<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_slab_bold"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:text="@string/find_your_jeep" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/backgroundz"
                android:padding="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/findTxtView"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/findTxtEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:hint="@string/enter_jeepney_code"
                    android:inputType="text" />

            </LinearLayout>

            <Button
                android:id="@+id/goBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/main"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/go" />

        </LinearLayout>

    </FrameLayout>

</ScrollView>
